test/library/standard/Random/bradc/test-Random-evenseed.1-0.good
test-Random-evenseed.chpl:20: error: halt reached - NPBRandomStream seed must be an odd integer
